syntax = "proto3";
package dymensionxyz.dymension.iro;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "dymensionxyz/dymension/iro/params.proto";

option go_package = "github.com/dymensionxyz/dymension/v3/x/iro/types";

// Bonding curve represents a bonding curve in the IRO module.
// BondingCurve represents a bonding curve with parameters M, N, and C.
// The price of the token is calculated as follows:
// price = M * x^N + C
message BondingCurve {
  string M = 1 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string N = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
  string C = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}

// Plan represents a plan in the IRO module.
message Plan {
  // The ID of the plan.
  uint64 id = 1;

  // The ID of the rollapp.
  string rollapp_id = 2;

  // The module account address to hold the raised DYM tokens.
  string module_acc_address = 3
      [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // The total amount of tokens allocated for the IRO.
  cosmos.base.v1beta1.Coin total_allocation = 4
      [ (gogoproto.nullable) = false ];

  BondingCurve bonding_curve = 5 [ (gogoproto.nullable) = false ];

  // If set, the plan is settled, and the minted allocated tokens can be claimed
  // for this settled_denom
  string settled_denom = 6;

  // The start time of the plan.
  google.protobuf.Timestamp start_time = 7
      [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];

  // The time before which the rollapp cannot be started.
  google.protobuf.Timestamp pre_launch_time = 8
      [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];

  // The amount of tokens sold so far.
  string sold_amt = 9 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  // The amount of tokens claimed so far.
  string claimed_amt = 10 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  // The incentive plan parameters for the tokens left after the plan is
  // settled.
  IncentivePlanParams incentive_plan_params = 11
      [ (gogoproto.nullable) = false ];

  // The maximum amount of tokens that can be sold for the plan.
  // This ensures we'll have enough tokens to bootstrap liquidity
  string max_amount_to_sell = 12 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  // The part of the liquidity that will be used for liquidity pool
  string liquidity_part = 13 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  IROVestingPlan vesting_plan = 14 [ (gogoproto.nullable) = false ];

  // Whether trading is enabled for the plan. default to true
  // can be set to false initially, to require EnableTrading tx for this IRO
  bool trading_enabled = 15;
}

message IncentivePlanParams {
  // start_time_after_settlement is the time after IRO settlement when the
  // distribution of the remaining tokens as incentives will start
  google.protobuf.Duration start_time_after_settlement = 1
      [ (gogoproto.stdduration) = true, (gogoproto.nullable) = false ];
  // num_epochs_paid_over is the number of total epochs distribution will be
  // completed over
  uint64 num_epochs_paid_over = 2;
}

message IROVestingPlan {
  option (gogoproto.goproto_getters) = false;

  string amount = 1 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  string claimed = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];

  google.protobuf.Duration vesting_duration = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.moretags) = "yaml:\"vesting_duration\""
  ];

  google.protobuf.Duration start_time_after_settlement = 4
      [ (gogoproto.stdduration) = true, (gogoproto.nullable) = false ];

  // Vesting start time (set on IRO settlement)
  google.protobuf.Timestamp start_time = 5
      [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];

  // Vesting end time (set on IRO settlement)
  google.protobuf.Timestamp end_time = 6
      [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];
}
